Style "Cookie preference center" button

--- a/blocks/cookie-preference-center/cookie-preference-center.css
+++ b/blocks/cookie-preference-center/cookie-preference-center.css
@@ -1,3 +1,22 @@
-.cookie-preference-center button {
-    background: #6c757d; border-color: #6c757d; color: #fff; padding: 10px;
+.cookie-preference-center a.cta {
+    touch-action: manipulation;
+    white-space: nowrap;
+    padding: 12px 32px;
+    background-color: #004FBC; color:#fff;
+    font-weight: 700;
+    font-family: var(--ff-volvo-novum);
+    font-size: var(--body-font-size-xs);
+    border: 2px solid #53565A;
+}
+
+.cookie-preference-center a.cta::after {
+    position: initial;
+    content: "\f105";
+    font-size: 12px;
+    padding-left: 8px;
+    font-family: var(--ff-fontawesome);
+}
+
+.cookie-preference-center {
+    margin-bottom: 3rem;
 }
