--- a/blocks/press-releases/press-releases.css
+++ b/blocks/press-releases/press-releases.css
@@ -86,6 +86,50 @@
     background-color: var(--background-hover-color);
 }
 
+.block.press-releases .list-filter fieldset {
+    border: 0;
+}
+
+.block.press-releases .search-field {
+    display: grid;
+    grid-template-columns: 1fr 2.5em;
+    margin-bottom: 0.75em;
+}
+
+.block.press-releases .search-field input {
+    width: 100%;
+    padding: 15px;
+    max-width: unset;
+    border: 0;
+    margin-bottom: unset;
+    background-color: var(--input-background-color);
+}
+
+.block.press-releases .search-field button {
+    background-color: var(--link-color);
+    color: var(--c-white);
+    border: 0;
+}
+
+.block.press-releases .tags-field {
+    display: grid;
+    grid-template-columns: 1fr 68%;
+    align-items: center;
+    margin-bottom: 0.75em;
+}
+
+.block.press-releases .tags-field label {
+    font-size: 1.4rem;
+    justify-self: center;
+}
+
+.block.press-releases .tags-field select {
+    width: 100%;
+    background-color: var(--link-color);
+    color: var(--c-white);
+    padding: 15px 40px 15px 15px;
+}
+
 .block.press-releases .article-list {
     list-style: none;
     margin: 0;
@@ -98,6 +142,21 @@
 }
 
 @media screen and (min-width: 768px){
+    .block.press-releases .list-filter fieldset {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .block.press-releases .list-filter fieldset > div {
+        flex: 0 0 33%;
+    }
+
+    .block.press-releases .tags-field label {
+        justify-self: right;
+        padding-right: 0.5em;
+    }
+
     .block.press-releases .press-releases-cards {
         display: flex;
     }
