--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,7 @@
   --text-color: var(--volvo-text-gray);
   --btn-background-hover: #e1dfdd;
   --btn-border-hover: #030333;
+  --input-background-color: #f1f0ef;
 
   /* fonts */
   --ff-volvo-novum-medium: 'VolvoNovum-Medium', 'VolvoNovum-Medium Fallback', sans-serif;
