--- a/blocks/sub-nav/sub-nav.css
+++ b/blocks/sub-nav/sub-nav.css
@@ -1,7 +1,3 @@
-.header.block[data-block-status="loaded"] ~ .block.sub-nav {
-    position: relative;
-}
-
 .block.sub-nav nav {
     position: relative;
     margin: 0;
@@ -71,8 +67,12 @@
     display: none;
 }
 
-
 @media screen and (min-width: 992px) {
+    .block.sub-nav.sticky {
+        position: fixed;
+        top: 0;
+    }
+    
     .block.sub-nav nav {
         display: block;
     }
