fix: outside click, sizing issue on very small vp

--- a/blocks/sub-nav/sub-nav.css
+++ b/blocks/sub-nav/sub-nav.css
@@ -71,6 +71,8 @@
     .block.sub-nav.sticky {
         position: fixed;
         top: 0;
+        left: 0;
+        right: 0;
     }
     
     .block.sub-nav nav {
