--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -19,10 +19,6 @@ header nav {
   flex-flow: row wrap;
 }
 
-#nav {
-  z-index: 1010;
-}
-
 /* the brand  */
 header nav .brand {
   height: 35px;
@@ -140,7 +136,7 @@ header nav .semitrans {
   position: fixed;
   opacity: 0;
   background-color: #7F7F7F;
-  transition: opacity .2s cubic-bezier(.4, 0, .2, 1);
+  transition: visibility .2s, opacity .2s cubic-bezier(.4, 0, .2, 1);
 }
 
 header nav .hamburger-toggle[aria-expanded=true]~.semitrans {
