--- a/blocks/specifications/specifications.css
+++ b/blocks/specifications/specifications.css
@@ -76,6 +76,7 @@
     grid-column: span var(--grid-col-count);
     background: none;
     border-radius: 0;
+    border: none;
     padding: 15px;
     margin: 0;
     color: unset;
@@ -95,7 +96,7 @@
 .block.specifications .rowgroup-header::after {
     display: block;
     content: '\f067';
-    font-family: var(--fontawesome);
+    font-family: var(--ff-fontawesome);
 }
 
 /* column header mobile */
