--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -5,6 +5,7 @@
     font-size: 12px;
     text-decoration: none;
 }
+
 .pagination ol li .first::before {
     font-family: var(--ff-fontawesome);
     content: "\f048";
@@ -32,124 +33,6 @@
     margin-top: -10px;
 }
 
-/* Latest magazine articles */
-.block .latest-magazine-articles, .block .related-magazine-articles {
-    display: flex;
-    margin: 48px -15px;
-    width: 1170px;
-}
-
-.block .latest-magazine-articles article,
-.block .related-magazine-articles article {
-    width: 33.3333%;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.block .latest-magazine-articles article picture,
-.block .related-magazine-articles article picture {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-.block .latest-magazine-articles article p,
-.block .related-magazine-articles article p {
-    margin-bottom: 8px;
-    font-size: 13px;
-}
-
-.block .latest-magazine-articles article .content a {
-    color: var(--link-color);
-    font-weight: 700;
-    border: none;
-    padding: 0;
-    display: inline-block;
-    margin-bottom: 0;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    white-space: nowrap;
-    font-size: 16px;
-    line-height: 1.5;
-    border-radius: 0;
-    user-select: none;
-}
-
-/* Magazine articles */
-.block.magazine-articles .articles {
-    display: grid;
-}
-
-.block.magazine-articles .articles article {
-    padding: 30px 0;
-    border-bottom: 1px solid var(--background-light-gray);
-    display: inline-flex;
-}
-
-.block.magazine-articles .articles article a {
-    float: left;
-    margin-bottom: 16px;
-    padding-right: 15px;
-    position: relative;
-    z-index: 50;
-}
-
-.block.magazine-articles .articles article picture img {
-    margin-bottom: 16px;
-    height: 214px;
-    width: 380px;
-}
-
-.block.magazine-articles article h3 {
-    margin-top: 24px;
-    margin-bottom: 16px;
-    display: table;    font-family: var(--ff-volvo-novum-medium);
-    font-size: var(--heading-font-size-s);
-    letter-spacing: -.1px!important;
-    color: var(--volvo-text-gray);
-}
-
-.block.magazine-articles .articles article .content {
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    clear: none;
-    width: 75%;
-}
-
-.block.magazine-articles article p {
-    margin-top: unset;
-    margin-bottom: 8px;
-    font-size: 1.3rem;
-}
-
-.block.magazine-articles article ul {
-    list-style-type: none;
-    padding-left: 0;
-    font-size: 12px;
-}
-
-.block.magazine-articles article ul li{
-    display: inline;
-}
-
-.block.magazine-articles article ul li:nth-child(2) {
-    color: var(--highlight-background-color);
-}
-
-.block.magazine-articles article ul li+li::before {
-    content: " | ";
-    padding: 0 5px;
-}
-
 .block.magazine-articles .pager {
     font-size: 1.4rem;
     display: grid;
@@ -174,6 +57,135 @@
     font-family: var(--ff-volvo-novum-medium);
 }
 
+/* Latest and related magazine articles */
+.latest-magazine-articles,
+.related-magazine-articles {
+    display: unset;
+}
+
+.latest-magazine-articles article,
+.related-magazine-articles article {
+    margin-top: 24px;
+}
+
+.latest-magazine-articles article:first-child,
+.related-magazine-articles article:first-child {
+    margin-top: -24px;
+}
+
+.latest-magazine-articles > article img,
+.latest-magazine-articles > article source,
+.related-magazine-articles article img,
+.related-magazine-articles article source{
+    display: block;
+    height: auto;
+    border: 0;
+    object-fit: cover;
+}
+
+.latest-magazine-articles .content h3 {
+    margin-bottom: 10px;
+    font-family: var(--ff-volvo-novum-medium);
+    font-size: var(--heading-font-size-xs);
+    letter-spacing: -.1px;
+    color: var(--volvo-text-gray);
+    margin-top: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    position: relative;
+    text-rendering: optimizelegibility;
+}
+
+.latest-magazine-articles .content p,
+.related-magazine-articles .content p {
+    margin-bottom: 8px;
+    font-size: 13px;
+    position: relative;
+    margin: 0 0;
+    letter-spacing: -.1px;
+    font-weight: 400;
+}
+
+.latest-magazine-articles .content a {
+    color: var(--link-color);
+    font-weight: 700;
+    border: none;
+    padding: 0;
+}
+
+
+/* Magazine articles */
+.magazine-articles-wrapper > div {
+    margin: 48px auto;
+}
+
+.block.magazine-articles .articles article {
+    padding: 30px 0;
+    border-bottom: 1px solid var(--background-light-gray);
+    display: block;
+}
+
+.block.magazine-articles article a.imgCover {
+    float: unset;
+    margin-bottom: 16px;
+    padding-right: 15px;
+    position: relative;
+    z-index: 50;
+    width: 100%;
+    height: 250px;
+    display: block;
+}
+
+.block.magazine-articles article picture img {
+    margin-bottom: 16px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.block.magazine-articles .articles article h3 {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    display: table;
+    font-family: var(--ff-volvo-novum-medium);
+    font-size: var(--heading-font-size-s);
+    letter-spacing: -.1px!important;
+    color: var(--volvo-text-gray);
+}
+
+.block.magazine-articles .articles article .content {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    clear: none;
+    width: 75%;
+}
+
+.block.magazine-articles article p {
+    margin-top: unset;
+    margin-bottom: 8px;
+}
+
+.block.magazine-articles article ul {
+    list-style-type: none;
+    padding-left: 0;
+    font-size: 12px;
+}
+
+.block.magazine-articles article ul li{
+    display: inline;
+}
+
+.block.magazine-articles article ul li:nth-child(2) {
+    color: var(--highlight-background-color);
+}
+
+.block.magazine-articles article ul li+li::before {
+    content: " | ";
+    padding: 0 5px;
+}
+
 .block.magazine-articles .article-list {
     list-style: none;
     margin: 0;
@@ -184,3 +196,88 @@
     padding: 2em 0;
     border-top: 1px solid var(--background-light-gray);
 }
+
+.cta {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 700;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 2px solid transparent;
+    white-space: nowrap;
+    padding: 12px 32px;
+    font-size: 16px;
+    line-height: 1.5;
+    border-radius: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.related-magazine-articles .content a {
+    color: var(--volvo-text-gray);
+    font-weight: 700;
+    border: none;
+    padding: 0;
+}
+
+.related-magazine-articles .content h3 {
+    font-family: var(--ff-volvo-novum-medium);
+    font-size: var(--heading-font-size-xs);
+    letter-spacing: -.1px;
+    color: var(--volvo-text-gray);
+    margin: 16px 0;
+    font-weight: 400;
+    line-height: 32px;
+    position: relative;
+    text-rendering: optimizelegibility;
+}
+
+@media screen and (min-width: 767px) {
+    .latest-magazine-articles,
+    .related-magazine-articles {
+        display: flex;
+        margin: 0 -15px;
+    }
+    .latest-magazine-articles article,
+    .related-magazine-articles article {
+        position: relative;
+        min-height: 1px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .latest-magazine-articles article:first-child,
+    .related-magazine-articles article:first-child {
+        margin-top: 24px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .latest-magazine-articles article,
+    .related-magazine-articles article {
+        width: 33.3333%;
+    }
+}
+
+@media screen and (min-width: 991px) {
+    .latest-magazine-articles article,
+    .related-magazine-articles article {
+        display: unset;
+    }
+    .block.magazine-articles .articles article {
+        display: inline-flex!important;
+    }
+    .block.magazine-articles .articles article a.imgCover {
+        float: left!important;
+        height: 214px!important;
+        width: 380px!important;    
+    }
+    .block.magazine-articles article a.imgCover {
+        height: 214px!important;
+    }
+}
+
+    
