--- a/styles/styles.css
+++ b/styles/styles.css
@@ -495,6 +495,10 @@ a.button.text-link-with-video::after {
     --sub-nav-height: 48px;
   }
 
+  main {
+    margin: 30px 0;
+  }
+
   main .section > div {
     width: 960px;
   }
