--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   background: white;
-  z-index: 1;
+  z-index: 100;
   transition: opacity 0.15s linear, visibility 0.15s linear;
   opacity: 1;
 }
@@ -35,6 +35,32 @@
   position: absolute;
 }
 
+.modal-before-banner {
+  font-size: 16px;
+  background: var(--background-color);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-before-banner button {
+  border: none;
+  background: transparent;
+  color: #0d3c87;
+  text-decoration: underline;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: var(--ff-volvo-novum);
+}
+
+.modal-before-banner button.modal-close-button {
+  padding-left: 20px;
+  color: var( --volvo-text-light-gray);
+  text-decoration: none;
+  font-size: 18px;
+}
+
 @media (min-width: 768px) {
   .modal-content {
     margin: 100px auto;
@@ -52,4 +78,5 @@
   .modal-content {
     width: 1170px;
   }
+}
 }
