--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -1,57 +1,85 @@
-/* pagination */
-.pager .pagination ol li .last::before {
+/* Filter magazine articles */
+.block.magazine-articles .list-filter {
+    background-color: var(--volvo-text-gray);
+    padding: 25px;
+    margin: 0 15px 24px 15px;
+}
+
+.block.magazine-articles .list-filter input,
+.block.magazine-articles .list-filter select {
+    font-family: var(--ff-volvo-novum);
+    font-size: 1.6rem;
+    background-color: var(--c-white);
+}
+
+.block.magazine-articles .list-filter fieldset {
+    border: 0;
+}
+
+.block.magazine-articles .list-filter fieldset div{
+    flex-basis: 0;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    max-width: 100%;
+    margin: 0 15px;
+}
+
+.block.magazine-articles .search-field {
+    position: relative;
+}
+
+.block.magazine-articles .search-field button {
+    right: 1rem;
+    top: 0.7rem;
+    width: 2.6rem;
+    height: 2.6rem;
+    border-radius: 0.3rem;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    background-color: transparent;
+    border: 0;
+}
+
+.block.magazine-articles .category-field,
+.block.magazine-articles .topic-field,
+.block.magazine-articles .truck-field   {
+    display: block;
+    position: relative;
+    grid-template-columns: 1fr 68%;
+    align-items: center;
+    margin-bottom: 0.75em;
+}
+
+.block.magazine-articles .category-field::after,
+.block.magazine-articles .topic-field::after,
+.block.magazine-articles .truck-field::after  {
     font-family: var(--ff-fontawesome);
-    content: "\f051";
-    font-size: 12px;
-    text-decoration: none;
+    color: var(--volvo-text-gray);
+    content: "\f107";
+    position: absolute;
+    display: inline-block;
+    right: 15px;
+    top: 50%;
+    margin-top: -1.2rem;
+    line-height: 2.0rem;
+    font-size: 2.4rem;
+    pointer-events: none;
 }
 
-.pager .pagination ol li .first::before {
-    font-family: var(--ff-fontawesome);
-    content: "\f048";
-    font-size: 12px;
-    text-decoration: none;
+.block.magazine-articless .category-field select,
+.block.magazine-articless .topic-field select,
+.block.magazine-articless .truck-field select {
+    width: 100%;
+    appearance: none;
+    background-color: var(--c-white);
+    color: var(--c-white);
+    padding: 15px 40px 15px 15px;
 }
 
-.pager .pagination ol li .next::before {
-    font-family: var(--ff-fontawesome);
-    content: "\f054";
-    font-size: 12px;
-    text-decoration: none;
-}
-
-.pager .pagination ol li .prev::before {
-    font-family: var(--ff-fontawesome);
-    content: "\f053";
-    font-size: 12px;
-    text-decoration: none;
-}
-
-.pager .pagination ol li:not(:first-child) {
-    float: right;
-    padding: 10px;
-    margin-top: -10px;
-}
-
-.block.magazine-articles .pager {
-    font-size: 1.4rem;
-    display: grid;
-    margin-bottom: 1em;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.block.magazine-articles .pager .pagination {
-    justify-self: end;
-}
-
-.block.magazine-articles .pager .pagination .scroll {
-    padding: 0;
-    margin: 0 0 0 15px;
-    display: inline-flex;
-    gap: 5px;
-    list-style: none;
-}
-
+/* Latest magazine articles */
 .block.latest .latest-magazine-articles article .content h3 a {
     color: var(--link-color);
     font-weight: 700;
@@ -59,39 +87,20 @@
     padding: 0;
 }
 
-.block.related .related-magazine-articles article .content h3 a {
-    color: var(--volvo-text-gray);
-    font-weight: 700;
-    border: none;
-    padding: 0;
-}
-
-.block.magazine-articles .pager .pagination .scroll li a {
-    color: var(--volvo-text-gray);
-    font-family: var(--ff-volvo-novum-medium);
-}
-
-/* Latest and related magazine articles */
-
-.block .latest-magazine-articles,
-.block .related-magazine-articles {
+.block .latest-magazine-articles {
     display: unset;
 }
 
-.block .latest-magazine-articles article,
-.block .related-magazine-articles article {
+.block .latest-magazine-articles article {
     margin-top: 24px;
 }
 
-.block .latest-magazine-articles article:first-child,
-.block .related-magazine-articles article:first-child {
+.block .latest-magazine-articles article:first-child {
     margin-top: -24px;
 }
 
 .block .latest-magazine-articles > article img,
-.block .latest-magazine-articles > article source,
-.block .related-magazine-articles article img,
-.block .related-magazine-articles article source{
+.block .latest-magazine-articles > article source {
     display: block;
     height: auto;
     border: 0;
@@ -111,25 +120,12 @@
     text-rendering: optimizelegibility;
 }
 
-.block .latest-magazine-articles .content p,
-.block .related-magazine-articles .content p {
+.block .latest-magazine-articles .content p {
     font-size: 13px;
     position: relative;
     margin: 0;
     letter-spacing: -.1px;
     font-weight: 400;
-}
-
-.block .related-magazine-articles .content h3 {
-    font-family: var(--ff-volvo-novum-medium);
-    font-size: var(--heading-font-size-xs);
-    letter-spacing: -.1px;
-    color: var(--volvo-text-gray);
-    margin: 16px 0;
-    font-weight: 400;
-    line-height: 32px;
-    position: relative;
-    text-rendering: optimizelegibility;
 }
 
 /* Magazine articles */
@@ -224,10 +220,7 @@
     vertical-align: middle;
     touch-action: manipulation;
     cursor: pointer;
-    background-image: none;
-    border: 2px solid transparent;
     white-space: nowrap;
-    padding: 12px 32px;
     font-size: 16px;
     line-height: 1.5;
     border-radius: 0;
@@ -235,36 +228,42 @@
 }
 
 @media screen and (min-width: 767px) {
-    .block .latest-magazine-articles,
-    .block .related-magazine-articles {
+    .block .latest-magazine-articles {
         display: flex;
         margin: 0 -15px;
     }
 
-    .block .latest-magazine-articles article,
-    .block .related-magazine-articles article {
+    .block .latest-magazine-articles article {
         position: relative;
         min-height: 1px;
         padding-left: 15px;
         padding-right: 15px;
     }
 
-    .block .latest-magazine-articles article:first-child,
-    .block .related-magazine-articles article:first-child {
+    .block .latest-magazine-articles article:first-child {
         margin-top: 24px;
     }
 }
 
 @media screen and (min-width: 768px) {
-    .block .latest-magazine-articles article,
-    .block .related-magazine-articles article {
+    .block.magazine-articles .list-filter fieldset {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 25px;
+    }
+
+    .block.magazine-articles .list-filter fieldset div {
+        flex: 1 1 auto;
+        margin: 0 15px;
+    }
+
+    .block .latest-magazine-articles article {
         width: 33.3333%;
     }
 }
 
 @media screen and (min-width: 991px) {
-    .block .latest-magazine-articles article,
-    .block .related-magazine-articles article {
+    .block .latest-magazine-articles article {
         display: unset;
     }
 
