--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,6 +252,25 @@ a.button.primary:hover, button.primary:hover {
   border-color: var(--btn-border-hover);
 }
 
+button, input, select, textarea {
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+input[type=text],select,textarea {
+  display: block;
+  padding: 10px 40px 10px 15px;
+  border: none;
+  border-radius: 0;
+  background-color: #ebebea;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 main input {
   font-size: 1.25rem;
   width: 100%;
@@ -451,6 +470,65 @@ a.button.text-link-with-video i {
 
 a.button.text-link-with-video::after {
   content: unset;
+}
+
+/* pagination */
+.pager .pagination ol li .last::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f051";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .first::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f048";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .next::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f054";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .prev::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f053";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li:not(:first-child) {
+  float: right;
+  padding: 10px;
+  margin-top: -10px;
+}
+
+div.block div.pager {
+  font-size: 1.4rem;
+  display: grid;
+  margin-bottom: 1em;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+div.block div.pager .pagination {
+  justify-self: end;
+}
+
+div.block div.pager .pagination .scroll {
+  padding: 0;
+  margin: 0 0 0 15px;
+  display: inline-flex;
+  gap: 5px;
+  list-style: none;
+}
+
+div.block div.pager .pagination .scroll li a {
+  color: var(--volvo-text-gray);
+  font-family: var(--ff-volvo-novum-medium);
 }
 
 @media screen and (min-width: 480px) {
