#41 - add full witdh video

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,8 +1,13 @@
+.embed.embed-full-width {
+  width: 100%;
+  position: relative;
+}
+
 .embed-video {
   margin: auto;
 }
 
-.embed-video-iframe {
+.embed-video-element {
   aspect-ratio: 16/9;
   width: 100%;
 }
@@ -11,10 +16,18 @@
   .embed-video {
     width: 726px;
   }
+
+  .embed.embed-full-width .embed-video {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1300px) {
   .embed-video {
     width: 1170px;
+  }
+
+  .embed.embed-full-width .embed-video {
+    width: 100%;
   }
 }
