--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -10,6 +10,9 @@
     font-family: var(--ff-volvo-novum);
     font-size: 1.6rem;
     background-color: var(--c-white);
+    width: 100%;
+    margin-top: 1rem;
+    max-width: unset;
 }
 
 .block.magazine-articles .list-filter fieldset {
@@ -30,7 +33,7 @@
 
 .block.magazine-articles .search-field button {
     right: 1rem;
-    top: 0.7rem;
+    top: .8rem;
     width: 2.6rem;
     height: 2.6rem;
     border-radius: 0.3rem;
@@ -134,7 +137,7 @@
     margin: 48px auto;
 }
 
-.block.magazine-articles .articles article {
+.block.magazine-articles .article-list article {
     padding: 30px 0;
     border-bottom: 1px solid var(--background-light-gray);
     display: block;
@@ -158,7 +161,7 @@
     object-fit: cover;
 }
 
-.block.magazine-articles .articles article h3 {
+.block.magazine-articles .article-list article h3 {
     margin-top: 24px;
     margin-bottom: 16px;
     display: table;
@@ -168,16 +171,15 @@
     color: var(--volvo-text-gray);
 }
 
-.block.magazine-articles .articles article .content {
+.block.magazine-articles .article-list article .content {
     position: relative;
     min-height: 1px;
-    padding-left: 15px;
     padding-right: 15px;
     clear: none;
     width: 75%;
 }
 
-.block.magazine-articles .articles article p {
+.block.magazine-articles .article-list article p {
     margin-top: unset;
     margin-bottom: 8px;
 }
@@ -208,7 +210,7 @@
 }
 
 .block.magazine-articles .article-list article {
-    padding: 2em 0;
+    padding: 1.5em 0;
     border-top: 1px solid var(--background-light-gray);
 }
 
@@ -227,7 +229,11 @@
     user-select: none;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
+    .block.magazine-articles .search-field button {
+        top: 1.8rem;
+    }
+
     .block .latest-magazine-articles {
         display: flex;
         margin: 0 -15px;
@@ -243,9 +249,7 @@
     .block .latest-magazine-articles article:first-child {
         margin-top: 24px;
     }
-}
 
-@media screen and (min-width: 768px) {
     .block.magazine-articles .list-filter fieldset {
         display: flex;
         flex-wrap: wrap;
@@ -267,13 +271,24 @@
         display: unset;
     }
 
-    .block.magazine-articles .articles article {
-        display: inline-flex!important;
+    .block.magazine-articles article a.imgcover {
+        float: unset;
+        margin-bottom: auto;
+        width: auto;
+        height: auto;
     }
-
-    .block.magazine-articles .articles article a.imgcover {
+    
+    .block.magazine-articles .article-list article a.imgcover img {
         float: left!important;
         height: 214px!important;
         width: 380px!important;    
+    }
+
+    .block.magazine-articles .article-list article {
+        display: inline-flex!important;
+    }
+
+    .block.magazine-articles .article-list article .content {
+        padding-left: 15px;
     }
 }
