--- a/blocks/engine-specifications/chart.css
+++ b/blocks/engine-specifications/chart.css
@@ -84,7 +84,7 @@
 /* Media queries */
 @media (min-width: 745px) {
   .performance-chart {
-    --scale-factor: 1.6;
+    --scale-factor: 1.3;
   }
 
   .performance-chart-list,
@@ -95,7 +95,7 @@
   }
 
   .chart {
-    transform: scale(1.2);
+    transform: scale(1);
   }
 }
 
@@ -127,12 +127,12 @@
   }
 
   .performance-chart::before {
-    background: linear-gradient(90deg, #F7F7F7 54.11%, rgba(247 247 247 0%) 100%);
+    background: linear-gradient(90deg, #F7F7F7 54.11%, rgb(247 247 247 / 0%) 100%);
     left: calc(43vw - 600px);
   }
 
   .performance-chart::after {
-    background: linear-gradient(90deg, #F7F7F7 54.11%, rgba(247 247 247 0%) 100%);
+    background: linear-gradient(90deg, #F7F7F7 54.11%, rgb(247 247 247 / 0%) 100%);
     transform: matrix(-1, 0, 0, 1, 0, 0);
     right: calc(43vw - 600px);
   }
