--- a/blocks/engine-specifications/performance-specifications.css
+++ b/blocks/engine-specifications/performance-specifications.css
@@ -39,9 +39,9 @@
 .performance .rating-list {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
-  padding-left: 0;
+  padding: 0 5vw;
   margin-top: 20px;
 }
 
@@ -52,7 +52,7 @@
   text-align: center;
   line-height: 100%;
   list-style: none;
-  margin: 20px 21px 0;
+  margin: 20px 0 0;
 }
 
 .performance a,
@@ -69,4 +69,15 @@
 .performance .engine-rating .rating-item[data-active] a {
   color: #141414;
   border-bottom: 2px solid #141414;
+}
+
+@media (min-width: 745px) {
+  .performance .rating-list {
+    justify-content: center;
+    padding: 0;
+  }
+
+  .performance .rating-item {
+    margin: 20px 21px 0;
+  }
 }
