add some styling options to the text block

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,7 @@
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
   --volvo-text-gray: #53565A;
+  --volvo-text-black: #000;
   --volvo-text-light-gray: #A7A8A9;
   --text-color: var(--volvo-text-gray);
   --btn-background-hover: #e1dfdd;
