--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -6,3 +6,29 @@
     text-align: right;
 }
 
+
+.text.bold {
+    font-family: var(--ff-volvo-novum-medium);
+    font-weight: bold;
+}
+
+div.text.m {
+    font-size:   var(--body-font-size-m);
+}
+
+div.text.s {
+    font-size:   var(--body-font-size-s);
+}
+
+div.text.xs {
+    font-size:   var(--body-font-size-xs);
+}
+
+div.text.xxs {
+    font-size:   var(--body-font-size-xxs);
+}
+
+div.text.black {
+    color: var(--volvo-text-black);
+}
+
