--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -2,7 +2,7 @@
 .block.magazine-articles .list-filter {
     background-color: var(--volvo-text-gray);
     padding: 25px;
-    margin: 0 15px 24px 15px;
+    margin: 0 15px 24px;
 }
 
 .block.magazine-articles .list-filter input,
@@ -13,6 +13,10 @@
     width: 100%;
     margin-top: 1rem;
     max-width: unset;
+}
+
+.magazine-articles-wrapper > div {
+    margin: 48px auto;
 }
 
 .block.magazine-articles .list-filter fieldset {
@@ -133,14 +137,12 @@
 
 /* Magazine articles */
 
-.magazine-articles-wrapper > div {
-    margin: 48px auto;
-}
-
 .block.magazine-articles .article-list article {
     padding: 30px 0;
     border-bottom: 1px solid var(--background-light-gray);
     display: block;
+    padding: 1.5em 0;
+    border-top: 1px solid var(--background-light-gray);
 }
 
 .block.magazine-articles article a.imgcover {
@@ -209,11 +211,6 @@
     padding: 0;
 }
 
-.block.magazine-articles .article-list article {
-    padding: 1.5em 0;
-    border-top: 1px solid var(--background-light-gray);
-}
-
 .cta {
     display: inline-block;
     margin-bottom: 0;
@@ -244,6 +241,7 @@
         min-height: 1px;
         padding-left: 15px;
         padding-right: 15px;
+        width: 33.3333%;
     }
 
     .block .latest-magazine-articles article:first-child {
@@ -259,10 +257,6 @@
     .block.magazine-articles .list-filter fieldset div {
         flex: 1 1 auto;
         margin: 0 15px;
-    }
-
-    .block .latest-magazine-articles article {
-        width: 33.3333%;
     }
 }
 
