--- a/blocks/related-articles/related-articles.css
+++ b/blocks/related-articles/related-articles.css
@@ -18,11 +18,15 @@
     object-fit: cover;
 }
 
-.related-magazine-articles .content p {
+.related-magazine-articles article p {
+    margin-top: unset;
     margin-bottom: 8px;
+}
+
+.related-magazine-articles .content p {
     font-size: 13px;
     position: relative;
-    margin: 0 0;
+    margin: 0 0 8px;
     letter-spacing: -.1px;
     font-weight: 400;
 }
@@ -38,11 +42,6 @@
     width: 100%;
     height: 250px;
     display: block;
-}
-
-.related-magazine-articles article p {
-    margin-top: unset;
-    margin-bottom: 8px;
 }
 
 .related-magazine-articles article ul {
